--- a/dj/main/templates/show_parameters.html
+++ b/dj/main/templates/show_parameters.html
@@ -32,7 +32,8 @@ Youtube account:
         <li> <a href='/googauth/init/'>Start Grant Process</a><br>
             (Currently this app is unverified, we are working on getting verified.)<br>
             check "[x] See, edit, and permanently delete your YouTube videos"<br>
-            ("edit" includes upload ;/)<br>
+            ("edit" includes upload.)<br>
+            Screenshots of all the steps: {{ "https://github.com/CarlFK/veyepar/wiki/Youtube-Auth" | urlize }}
         <li> Next Day Video staff will use this to upload videos.
     </ol>
 {% endif %}</br>
