--- a/dj/main/templates/approve/base.html
+++ b/dj/main/templates/approve/base.html
@@ -25,7 +25,7 @@ Video link(s):<br>
     <a href="{{episode.archive_mp4_url}}">archive.org</a><br>
     {% endif %}
 {% endif %}
-(If there is not a link to a video, something is wrong.  Please report this to someone.)
+(If there are no links to a video, something is wrong.  Don't hit approve, do report this.)
 <hr>
 
 {% block point %}
